version/0.12/_sources/api/solver/_autosummary/settings/mesh.rst.txt
:orphan:

.. _mesh:

mesh
====

.. currentmodule:: ansys.fluent.core.solver.settings_231.mesh

.. autoclass:: mesh
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================================   ===================================================================================================================

Child                                                                                                                                                                          Summary

================================================================   ===================================================================================================================
:ref:`adapt <adapt>`                                                                                                                                                    'adapt' child.

:ref:`check_before_solve <check_before_solve>`                                                                                   Perform various mesh consistency checks before solve.

:ref:`check_verbosity <check_verbosity>`                               Set verbosity output of mesh check and mesh quality. Higher verbosity corresponds to more detailed information.

:ref:`enhanced_orthogonal_quality <enhanced_orthogonal_quality>`                                                                            Enable enhanced orthogonal quality method.

:ref:`matching_tolerance <matching_tolerance>`                                                                         Set the normalized tolerance used for finding coincident nodes.

:ref:`show_periodic_shadow_zones <show_periodic_shadow_zones>`                                                                 Option to show periodic shadow zones in user interface.

:ref:`reorder <reorder>`                                                                                                                                Enter the reorder domain menu.

:ref:`repair_improve <repair_improve>`                                                                                                      Enter the repair and improve quality menu.

:ref:`surface_mesh <surface_mesh>`                                                                                                                        Enter the surface mesh menu.

:ref:`polyhedra <polyhedra>`                                                                                                                                 Enter the polyhedra menu.

================================================================   ===================================================================================================================

.. rubric:: Commands

================================================================   =====================================================================

Command                                                                                                                          Summary

================================================================   =====================================================================
:ref:`adjacency <adjacency>`                                                 View and rename face zones adjacent to selected cell zones.

:ref:`check <check>`                                                                            Perform various mesh consistency checks.

:ref:`memory_usage <memory_usage>`                                                                             Report solver memory use.

:ref:`mesh_info <mesh_info>`                                                                                        'mesh_info' command.

:ref:`quality <quality>`                                                                               Perform analysis of mesh quality.

:ref:`rotate <rotate>`                                                                                                  Rotate the mesh.

:ref:`scale <scale>`                                                                                                    'scale' command.

:ref:`size_info <size_info>`                                                                                            Print mesh size.

:ref:`redistribute_boundary_layer <redistribute_boundary_layer>`                                  Enforce growth rate in boundary layer.

:ref:`swap_mesh_faces <swap_mesh_faces>`                                                                                Swap mesh faces.

:ref:`smooth_mesh <smooth_mesh>`                                       Smooth the mesh using quality-based, Laplace or skewness methods.

:ref:`replace <replace>`                                                                              Replace mesh and interpolate data.

:ref:`translate <translate>`                                                                                         Translate the mesh.

================================================================   =====================================================================

.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

